C2: assert(found_sfpt) failed: no node in loop that's not input to safepoint

XMLWordPrintable

    • b17
    • Verified

        Generated test crashed with:
        #
        # A fatal error has been detected by the Java Runtime Environment:
        #
        # Internal Error (open/src/hotspot/share/opto/loopnode.cpp:997), pid=2497, tid=2509
        # assert(found_sfpt) failed: no node in loop that's not input to safepoint
        #
        # JRE version: Java(TM) SE Runtime Environment (15.0+12) (fastdebug build 15-ea+12-431)
        # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 15-ea+12-431, compiled mode, sharing, tiered, compressed oops, g1 gc, linux-amd64)
        # Problematic frame:
        # V [libjvm.so+0x1027095] LoopNode::verify_strip_mined(int) const+0x685
        #
        # Core dump will be written. Default location: Core dumps may be processed with "/usr/libexec/abrt-hook-ccpp %s %c %p %u %g %t e %P %I %h" (or dumping to /tmp/fuzzer.tmp.GvrFgw4AwR/core.2497)
        #
        # If you would like to submit a bug report, please visit:
        # https://bugreport.java.com/bugreport/crash.jsp
        #

        --------------- S U M M A R Y ------------

        Command Line: -Xmx1G -Xcomp -Xbatch -XX:CompileOnly=Test Test

        Host: Intel Core Processor (Broadwell), 12 cores, 28G, Oracle Linux Server release 7.5
        Time: Fri Feb 28 23:33:48 2020 UTC elapsed time: 16 seconds (0d 0h 0m 16s)

        --------------- T H R E A D ---------------

        Current thread (0x00007f4a2433e000): JavaThread "C2 CompilerThread0" daemon [_thread_in_native, id=2509, stack(0x00007f49f3afb000,0x00007f49f3bfc000)]


        Current CompileTask:
        C2: 16378 77 b 4 Test::vMeth1 (322 bytes)

        Stack: [0x00007f49f3afb000,0x00007f49f3bfc000], sp=0x00007f49f3bf5d00, free space=1003k
        Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
        V [libjvm.so+0x1027095] LoopNode::verify_strip_mined(int) const+0x685
        V [libjvm.so+0x10277d7] CountedLoopNode::skip_strip_mined(int)+0x47
        V [libjvm.so+0x10014ea] PhaseIdealLoop::loop_predication_impl(IdealLoopTree*) [clone .part.94]+0x92a
        V [libjvm.so+0x1001ee9] IdealLoopTree::loop_predication(PhaseIdealLoop*)+0x109
        V [libjvm.so+0x1001e08] IdealLoopTree::loop_predication(PhaseIdealLoop*)+0x28
        V [libjvm.so+0x1001e08] IdealLoopTree::loop_predication(PhaseIdealLoop*)+0x28
        V [libjvm.so+0x1001e25] IdealLoopTree::loop_predication(PhaseIdealLoop*)+0x45
        V [libjvm.so+0x1001e25] IdealLoopTree::loop_predication(PhaseIdealLoop*)+0x45
        V [libjvm.so+0x1001e25] IdealLoopTree::loop_predication(PhaseIdealLoop*)+0x45
        V [libjvm.so+0x103d3b0] PhaseIdealLoop::build_and_optimize(LoopOptsMode)+0x12c0
        V [libjvm.so+0x86f61a] PhaseIdealLoop::optimize(PhaseIterGVN&, LoopOptsMode)+0x2ea
        V [libjvm.so+0x86c773] Compile::Optimize()+0x973
        V [libjvm.so+0x86de44] Compile::Compile(ciEnv*, C2Compiler*, ciMethod*, int, bool, bool, bool, DirectiveSet*)+0x1084
        V [libjvm.so+0x6dc580] C2Compiler::compile_method(ciEnv*, ciMethod*, int, DirectiveSet*)+0x110
        V [libjvm.so+0x87a91c] CompileBroker::invoke_compiler_on_method(CompileTask*)+0x2cc
        V [libjvm.so+0x87b8b8] CompileBroker::compiler_thread_loop()+0x458
        V [libjvm.so+0x152d896] JavaThread::thread_main_inner()+0x226
        V [libjvm.so+0x1532916] Thread::call_run()+0xf6
        V [libjvm.so+0x12651e6] thread_native_entry(Thread*)+0x116

        Register to memory mapping:

          1. FuzzerUtils$1.class
            0.8 kB
          2. FuzzerUtils.class
            8 kB
          3. FuzzerUtils.java
            13 kB
          4. Test.class
            5 kB
          5. Test.java
            8 kB
          6. hs_err_pid30869.log
            117 kB
          7. replay_pid30869.log
            125 kB

              Assignee:
              Roland Westrelin
              Reporter:
              Leonid Mesnik
              Votes:
              0 Vote for this issue
              Watchers:
              7 Start watching this issue

                Created:
                Updated:
                Resolved: