8240335: C2: assert(found_sfpt) failed: no node in loop that's not input to safepoint

Reviewed-by: kvn, thartmann